Dark mode icons are inverted in right click menu, but the correct icons are available

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1500,7 +1500,7 @@ img.context-menu-icon {
 	border: 1px solid var(--color-primary);
 }
 
-[data-theme='dark'] .ui-combobox-entry img {
+[data-theme='dark'] .ui-combobox-entry img:not() {
 	filter: invert(1);
 }
 
